migrate to bevy 0.5

--- a/trade-flow-frontend/index.html
+++ b/trade-flow-frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="html">
     <head>
         <title>Trade Flow Simulator</title>
         <script defer src="src/index.tsx"></script>
