--- a/trade-flow-frontend/index.html
+++ b/trade-flow-frontend/index.html
@@ -5,6 +5,6 @@
         <script defer src="src/index.tsx"></script>
     </head>
     <body>
-        <div id="root"></div>
+        <div onclick="console.log('hi from html')" id="root"></div>
     </body>
 </html>
