work with parcel 2

--- a/trade-flow-frontend/index.html
+++ b/trade-flow-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="html">
     <head>
         <title>Trade Flow Simulator</title>
-        <script defer src="src/index.tsx"></script>
+        <script defer type="module" src="src/index.tsx"></script>
     </head>
     <body>
         <div onclick="console.log('hi from html')" id="root"></div>
